<resources>
    [App]
        <string name="app_name">Final Project</string>

    [Home Page]
        <string name="home_page_title" translatable="false">GameFound™</string>
        <string name="daily_button">Daily</string>
        <string name="endless_button">Endless</string>

    [Daily Page]
        <string name="daily_page_title">Daily Game</string>
        <string name="daily_puzzle_title">Daily #%1$d</string>

    [Endless Page]
        <string name="endless_page_title">Endless Mode</string>
        <string name="endless_puzzle_title">Puzzle #%1$d</string>
        <string name="endless_skip_button">Skip</string>

    [Game Result Page]
        <string name="game_result_title">Game Result</string>
        <string name="visit_game_page_label">Visit game page</string>
        <string name="daily_game_done_button">Done</string>
        <string name="endless_next_button">Next</string>

    [General]
        <string name="guess_hint_text">Guess your game</string>
        <string name="guess_confirm_button_text">Confirm</string>
        <string name="correct_guess_text">CORRECT!</string>
        <string name="incorrect_guess_text">INCORRECT</string>
        <string name="clue_label">Clue</string>
        <string name="clue_number">%1$d/%2$d</string>
        <string name="back_arrow_description">Go to previous clue</string>
        <string name="forward_arrow_description">Go to next clue</string>
        <string name="loading_error">Unable to fetch game data.  Error message: %1$s</string>
        <string name="score_text">Score: %1$d</string>


    [Preferences]
        <string name="settings_page_title">Settings</string>
        [Dark Mode]
            <string name="dark_mode_title">Dark Mode</string>
            <string name="dark_mode_pref_summary">Turn dark mode on or off</string>
        [Audio]
            <string name="audio_title">Mute</string>
            <string name="audio_summary">Mute or unmute sound effects</string>
        [Screen Timeout]
            <string name="screen_timeout_title">Screen Timeout</string>
            <string name="screen_timeout_val_5">5 Seconds</string>
            <string name="screen_timeout_val_10">10 Seconds</string>
            <string name="screen_timeout_val_20">20 Seconds</string>
            <string name="screen_timeout_val_30">30 Seconds</string>
            <string name="screen_timeout_val_45">45 Seconds</string>
            <string name="screen_timeout_val_60">60 Seconds</string>
            <string name="screen_timeout_val_300">5 Minutes</string>
    
    

</resources>