<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference
        android:title="@string/dark_mode_title"
        android:summary="@string/dark_mode_pref_summary"
        android:key="dark_mode_enabled"
        android:defaultValue="false" />
    <CheckBoxPreference
        android:title="@string/audio_title"
        android:summary="@string/audio_summary"
        android:key="audio_enabled"
        android:defaultValue="false" />
    <ListPreference
        android:key="screen_timeout"
        android:title="@string/screen_timeout_title"
        android:defaultValue="30"
        android:entries="@array/screen_timeout_entries"
        android:entryValues="@array/screen_timeout_vals"
        app:useSimpleSummaryProvider="true"/>

</androidx.preference.PreferenceScreen>