<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <Button
            android:id="@+id/daily_navigation"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:textAlignment="center"
            android:text="@string/daily_button"
            android:textSize="24sp"
            android:backgroundTint="@color/btn_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintBottom_toTopOf="@+id/endless_navigation" />
        <Button
            android:id="@+id/endless_navigation"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:textAlignment="center"
            android:text="@string/endless_button"
            android:textSize="24sp"
            android:backgroundTint="@color/btn_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="96dp"/>
        <Button
            android:id="@+id/settings_navigation"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:textAlignment="center"
            android:text="@string/settings_page_title"
            android:textSize="24sp"
            android:backgroundTint="@color/btn_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintTop_toBottomOf="@+id/endless_navigation" />
</androidx.constraintlayout.widget.ConstraintLayout>